--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -5,7 +5,7 @@
     <input name="email">
     <br/>
     <label>Password</label>
-    <input type="password">
+    <input name="password" type="password">
     <input type="submit">
 
     </form>
