--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -14,7 +14,7 @@
         <input name="age">
 
         <label> Password </label>
-        <input type="password">
+        <input name="password" type="password">
 
         <input type="submit">
     </form>
